# qarax-axum

./: .env  Cargo.toml  qarax.yml  sqlx-data.json
e2e/: e2e.py  requirements.txt  terraform.py  util.py
e2e/terraform/: main.tf  out
playbooks/roles/setup_host/tasks/: prologue.yml
playbooks/roles/setup_host/tasks/files/: setup_bridge.sh  start_qarax_node.sh
proto/: node.proto
qarax-node/: Cargo.toml
qarax-node/firecracker_rust_sdk/: Cargo.toml
qarax-node/firecracker_rust_sdk/src/http/: client.rs
qarax-node/firecracker_rust_sdk/src/models/: balloon.rs  balloon_stats.rs  balloon_stats_update.rs  balloon_update.rs  boot_source.rs  cpu_template.rs  drive.rs  error.rs  full_vm_configuration.rs  instance_action_info.rs  instance_info.rs  logger.rs  machine.rs  machine_configuration.rs  metrics.rs  mmds_config.rs  network_interface.rs  partial_drive.rs  partial_network_interface.rs  rate_limiter.rs  snapshot_create_params.rs  snapshot_load_params.rs  token_bucket.rs  vm.rs  vsock.rs
qarax-node/src/: main.rs  vmm_service.rs
src/: main.rs
src/handlers/: hosts.rs  mod.rs  storage.rs  vms.rs
src/handlers/models/: drives.rs  hosts.rs  mod.rs
src/handlers/rpc/: client.rs
