[package]
name = "qarax-axum"
version = "0.1.0"
authors = ["Benny Zlotnik <bzlotnik@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate", "macros", "offline"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
anyhow = "1.0.42"
thiserror = "1.0.26"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
dotenv = "0.15.0"
strum = "0.21.0"
strum_macros = "0.21.1"
tokio = { version = "1.9.0", features = ["full"] }
hyper = { version = "0.14.11", features = ["full"] }
tower = "0.4.8"
http = "0.2.4"
tower-http = { version = "0.1.1", features = ["trace"] }
tonic = "0.5.0"
prost = "0.8.0"
clap = "3.0.0-beta.2"
tonic-health = "0.4.0"

[build-dependencies]
tonic-build = "0.5.1"

[workspace]
default-members = [".", "qarax-node"]
members = [".", "qarax-node"]
