[package]
name = "qarax-node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full"] }
tonic = "0.5.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
prost = "0.8.0"
tonic-health = "0.4.0"

[build-dependencies]
tonic-build = "0.5.1"
