[package]
name = "qarax-node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
tokio = { version = "1.11.0", features = ["full"] }
tonic = "0.5.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
prost = "0.8.0"
tonic-health = "0.4.1"
firecracker_rust_sdk = { path = "./firecracker_rust_sdk" }

[build-dependencies]
tonic-build = "0.5.2"

[[bin]]
name = "qarax-node"
path = "src/main.rs"
