[package]
name = "firecracker_rust_sdk"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors", "Benny Zlotnik"]
edition = "2018"


[dependencies]
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
url = "2.2.2"
serde_yaml = "0.8.18"
base64 = "0.13.0"
futures = "0.3.16"
hyper = "0.14.11"
hyperlocal = "0.8.0"
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
tracing-appender = "0.1.2"
anyhow = "1.0.43"
thiserror = "1.0.26"

[dev-dependencies]
tokio-core = "0.1.18"
